// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/platform/github/index getRepoForceRebase should throw 401 1`] = `"Response code 401 (Unauthorized)"`;

exports[`modules/platform/github/index getRepos should return an array of repos 1`] = `
[
  "a/b",
  "c/d",
]
`;

exports[`modules/platform/github/index initPlatform() should support custom endpoint 1`] = `
{
  "endpoint": "https://ghe.renovatebot.com/",
  "gitAuthor": "undefined <user@domain.com>",
  "renovateUsername": "renovate-bot",
  "token": "123test",
}
`;

exports[`modules/platform/github/index initPlatform() should support custom endpoint without version 1`] = `
{
  "endpoint": "https://ghe.renovatebot.com/",
  "gitAuthor": "undefined <user@domain.com>",
  "renovateUsername": "renovate-bot",
  "token": "123test",
}
`;

exports[`modules/platform/github/index initPlatform() should support default endpoint no email access 1`] = `
{
  "endpoint": "https://api.github.com/",
  "gitAuthor": undefined,
  "renovateUsername": "renovate-bot",
  "token": "123test",
}
`;

exports[`modules/platform/github/index initPlatform() should support default endpoint no email result 1`] = `
{
  "endpoint": "https://api.github.com/",
  "gitAuthor": undefined,
  "renovateUsername": "renovate-bot",
  "token": "123test",
}
`;

exports[`modules/platform/github/index initPlatform() should support default endpoint with email 1`] = `
{
  "endpoint": "https://api.github.com/",
  "gitAuthor": "undefined <user@domain.com>",
  "renovateUsername": "renovate-bot",
  "token": "123test",
}
`;

exports[`modules/platform/github/index initPlatform() should support gitAuthor and username 1`] = `
{
  "endpoint": "https://api.github.com/",
  "gitAuthor": "renovate@whitesourcesoftware.com",
  "renovateUsername": "renovate-bot",
  "token": "123test",
}
`;

exports[`modules/platform/github/index initRepo detects fork default branch mismatch 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "cd69e13f03c1f8d5399903d4d5e8973cb05218f8b392011be98dd52f0faf2b28541830a9a847716aab9b56be6f4c8e0e4b7cb6d726e7cc992f0b02168bc53f11",
}
`;

exports[`modules/platform/github/index initRepo should fork when forkMode 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "cd69e13f03c1f8d5399903d4d5e8973cb05218f8b392011be98dd52f0faf2b28541830a9a847716aab9b56be6f4c8e0e4b7cb6d726e7cc992f0b02168bc53f11",
}
`;

exports[`modules/platform/github/index initRepo should merge 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "cd69e13f03c1f8d5399903d4d5e8973cb05218f8b392011be98dd52f0faf2b28541830a9a847716aab9b56be6f4c8e0e4b7cb6d726e7cc992f0b02168bc53f11",
}
`;

exports[`modules/platform/github/index initRepo should not guess at merge 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "cd69e13f03c1f8d5399903d4d5e8973cb05218f8b392011be98dd52f0faf2b28541830a9a847716aab9b56be6f4c8e0e4b7cb6d726e7cc992f0b02168bc53f11",
}
`;

exports[`modules/platform/github/index initRepo should rebase 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "cd69e13f03c1f8d5399903d4d5e8973cb05218f8b392011be98dd52f0faf2b28541830a9a847716aab9b56be6f4c8e0e4b7cb6d726e7cc992f0b02168bc53f11",
}
`;

exports[`modules/platform/github/index initRepo should squash 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "cd69e13f03c1f8d5399903d4d5e8973cb05218f8b392011be98dd52f0faf2b28541830a9a847716aab9b56be6f4c8e0e4b7cb6d726e7cc992f0b02168bc53f11",
}
`;

exports[`modules/platform/github/index initRepo should update fork when forkMode 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "cd69e13f03c1f8d5399903d4d5e8973cb05218f8b392011be98dd52f0faf2b28541830a9a847716aab9b56be6f4c8e0e4b7cb6d726e7cc992f0b02168bc53f11",
}
`;

exports[`modules/platform/github/index massageMarkdown(input) returns updated pr body 1`] = `"[https://github.com/foo/bar/issues/5](https://togithub.com/foo/bar/issues/5) plus also [a link](https://togithub.com/foo/bar/issues/5)"`;
